--- a/Styles.css
+++ b/Styles.css
@@ -14,3 +14,11 @@ h1 {
   color: white;
   border-radius: 2px;
 }
+button {
+  background-color: white;
+  border: 3px solid black;
+  border-radius: 3px;
+}
+button:hover {
+  background-color: grey;
+}
