--- a/Styles.css
+++ b/Styles.css
@@ -18,7 +18,10 @@ button {
   background-color: white;
   border: 3px solid black;
   border-radius: 3px;
+  width: 500px;
+  height: 20px;
 }
 button:hover {
   background-color: grey;
+  cursor: pointer;
 }
